# nmiai

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  RULES.md  analyze_ghost_seeds.py  competition-rules.md  fetch-docs.sh  heartbeat.sh  main.py  print_neighborhoods.py  pyproject.toml  register-agent.sh  research-notes.md  show-registry.sh  tmux-layout.md
.github/: auto-tag-config.yml
tasks/accounting/server/: ISSUES.md  actions.py  adversarial_prompts.py  agent.py  check_vat_types.py  embed_classifier.py  executor.py  failed_cases.json  generate_test_pdfs.py  main.py  mock_tripletex.py  parse_openapi.py  parser.py  planner.py  pyproject.toml  scorer_checks.py  snail_runner.py  test_harness.py  tripletex_client.py
tasks/accounting/server/endpoint_cards/: bank.json  bank.txt  company.json  company.txt  customer.json  customer.txt  department.json  department.txt  employee.json  employee.txt  invoice.json  invoice.txt  product.json  product.txt  project.json  project.txt  salary.json  salary.txt  supplier.json  supplier.txt  timesheet.json  timesheet.txt  travel_expense.json  travel_expense.txt  voucher.json  voucher.txt
tasks/accounting/server/playbooks/: annual_close.json  bank_reconciliation.json  cost_analysis.json  customer.json  department.json  employee.json  invoice.json  ledger_correction.json  product.json  project.json  salary.json  supplier.json  timesheet.json  travel_expense.json  voucher.json
tasks/object-detection/data-creation/: analyze_dataset.py  analyze_gaps.py  analyze_sku_pl.py  auto_sam_merge.sh  boost_mega_balance.py  boost_weak_categories.py  build_barcode_mapping.py  build_classifier_crops.py  build_classifier_dataset.py  build_confusable_dataset.py  build_embeddings.py  build_final_dataset.py  build_hard_negative_pairs.py  build_large_val_split.py  build_mega_dataset.py  build_multitask_dataset.py  build_v7_balanced.py  build_yolo_v3.py  build_yolo_v4.py  convert_combined_to_yolo.py  convert_embeddings_to_pth.py  convert_to_yolo.py  copy_paste_augment.py  create_augmented_yolo.py  create_clean_split.py  create_pretrain_dataset.py  create_stratified_split.py  dataset_analysis.json  download_external_datasets.py  eval_per_class.py  external_datasets.md  extract_training_crops.py  extract_video_frames.py  fetch_high_risk.py  fetch_kassal_images.py  fetch_oda_images.py  fetch_product_images.py  fetch_remaining.py  fix_yaml_files.py  gap_analysis.json  (+21 more)
tasks/object-detection/vlm-approach/: MARKUSNET_CHECKPOINTS.md  ONNX_DYNAMIC_PLAN.md  README.md  build_embeddings.py  build_val_leaderboard.py  check_runtime_token_load.py  check_token_payload.py  debug_langmodel_findings.md  debug_lm_layer_parity.py  dinov2_classifier.py  eval_classification.py  eval_markusnet_quick.py  eval_stratified_map.py  export_markusnet.py  export_nf4.py  export_nf4_multitask.py  export_vision_dynamic.py  fetch_external_datasets.py  gpu1_launcher.sh  lightning_lora_plan.md  overnight_pipeline.py  package_submission.py  prune_qwen35.py  pyproject.toml  qwen35_finetune.py  run.py  run_dense_retrieval.py  run_markusnet.py  surgical_prune_8layer.py  test_vision_only.py  train_12layer_boost.py  train_coco_minitrain.py  train_continue.py  train_ddp.py  train_distill.py  train_lightning.py  train_linear_probe.py  train_lora_soup.py  train_objects365.py  train_overnight.py  (+8 more)
tasks/object-detection/vlm-approach/lightning_output/: layer_importance.json
tasks/object-detection/vlm-approach/pruned/: config.json
tasks/object-detection/vlm-approach/pruned_8layer_surgical/: config.json
tasks/object-detection/vlm-approach/val_eval/: leaderboard_failures.json  leaderboard_latest.md
(+549 files in other folders)
