[project]
name = "nmiai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.7.1",
    "numpy>=2.4.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "xgboost>=3.2.0",
]

[tool.uv.workspace]
members = [
    "tasks/object-detection/data-creation",
    "tasks/object-detection/yolo-approach",
    "tasks/object-detection/sam3-approach",
]
