[project]
name = "tripletex-agent"
version = "0.1.0"
description = "AI Accounting Agent for NM i AI 2026 - Tripletex challenge"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=1.70.0",
    "pymupdf>=1.27.2.2",
    "pillow>=12.1.1",
    "numpy>=2.0.0",
    "sentence-transformers>=5.0.0",
    "torch>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
