[project]
name = "data-creation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "huggingface-hub>=1.7.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "pycocotools>=2.0.11",
    "pyyaml>=6.0.3",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
