[project]
name = "vlm-approach"
version = "0.1.0"
description = "VLM-based classification pipeline for object detection challenge"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "timm>=1.0.0",
    "Pillow>=10.0.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "ultralytics>=8.1.0",
]
